# binflow-viewer

./: Cargo.toml  LICENSE-MIT  README.md
data/prices/: btcusd
data/resources/: binflow.gresource.xml
data/resources/ui/: chart.ui  menu.ui  window.ui
src/: build.rs  readme.md
src/app/: mod.rs
src/app/binflowviewer/: mod.rs
src/app/binflowviewer/window/: imp.rs  mod.rs  window.ui
src/app/binflowviewer/window/components/chart/: imp.rs  mod.rs
src/schemas/: net.vs-binflow.viewer.gschema.xml
