[package]
name = "binflow"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.4.8"
gio = "0.15.12"
glib = "0.15.12"
chrono = "0.4.23"
gdk4 = "0.6.2"
rand = "0.8.5"

[build-dependencies]
glib-build-tools = "0.17.0"
